--- a/src/AppBundle/Resources/views/public/contact.html.twig
+++ b/src/AppBundle/Resources/views/public/contact.html.twig
@@ -9,7 +9,7 @@
         <div class="col-md-12 col-lg-offset-2 col-lg-8"> 
           <div class="form-wrapper"> 
             <div class="from-header"> 
-              <h2>Get in touch</h2> 
+              <h2>Entrer en contact</h2> 
               <p>Have a project you would like us to consider or just want to say hello? We would love to hear from you. Use the form below to describe your project and contact us. We promise to get in touch with you shortly.</p> 
             </div> 
  
@@ -18,7 +18,7 @@
               <!-- Name --> 
               <div class="form-group"> 
                 <input type="text" name="name" id="name-contact-3" class="form-control validate-locally"> 
-                <label for="name-contact-3">Name *</label> 
+                <label for="name-contact-3">Nom *</label> 
                 <span class="pull-right alert-error"></span> 
               </div> 
  
@@ -32,12 +32,12 @@
               <!-- Phone --> 
               <div class="form-group ws-s"> 
                 <input type="tel" name="phone" id="phone-contact-3" class="form-control"> 
-                <label for="email-contact-3">Phone</label> 
+                <label for="email-contact-3">Telephone</label> 
               </div> 
  
               <!-- Message --> 
               <div class="form-group"> 
-                <p>Just say hello, or tell me about your project</p> 
+                <p>Dites nous bonjour, ou parlez-nous de votre projet</p> 
                 <textarea class="form-control" name="message" id="message-contact-1" rows="5"></textarea> 
                 <label for="message-contact-1">Message *</label> 
               </div> 
@@ -66,10 +66,8 @@
       <div class="row"> 
          
         <ul> 
-          <li><a href="#">facebook</a></li> 
+          <li><a href="#">Facebook</a></li> 
           <li><a href="#">Twitter</a></li> 
-          <li><a href="#">Dribbble</a></li> 
-          <li><a href="#">Behance</a></li> 
         </ul> 
  
       </div> 
