--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -33,14 +33,9 @@
             <!-- Navbar Links -->
             <div id="navbar" class="navbar-collapse collapse page-scroll navbar-right">
                 <ul class="nav navbar-nav">
-                    <li><a href="#home">Home<span class="sr-only"></span></a></li>
-                    <li><a href="#about">About<span class="sr-only"></span></a></li>
-                    <li><a href="#services">Services<span class="sr-only"></span></a></li>
-                    <li><a href="#portfolio">Portfolio<span class="sr-only"></span></a></li>
-                    <li><a href="#testimonials">Testimonials<span class="sr-only"></span></a></li>
-                    <li><a href="#blog">Blog<span class="sr-only"></span></a></li>
+                    <li><a href="#home">Accueil<span class="sr-only"></span></a></li>
+                    <li><a href="#annonce">Annonces<span class="sr-only"></span></a></li>
                     <li><a href="#contact">Contact<span class="sr-only"></span></a></li>
-                    <li><a href="index.html">All Demos<span class="sr-only"></span></a></li>
                 </ul><!-- / .nav .navbar-nav -->
             </div><!--/.navbar-collapse -->
         </nav><!-- / .navbar -->
@@ -62,13 +57,13 @@
                         <div class="hero-content">
 
                             <img src="{{ asset('img/hero/ag2-logo.png') }}" alt="Presentation">
-                            <h1 class="hero-lead">Creative Agency</h1>
-                            <h4 class="h-alt hero-secondary">Web Design &amp; Development</h4>
-                            <a href="#about" class="btn btn-light">Learn More</a>
+                            <h1 class="hero-lead">E-Mobilier</h1>
+                            <h4 class="h-alt hero-secondary">Agence de regroupement d'annonces immobilières</h4>
+                            <a href="#about" class="btn btn-light">En savoir plus</a>
 
                             <!-- Scroller -->
                             <a href="#about" class="scroller">
-                                <span class="scroller-text">scroll down</span>
+                                <span class="scroller-text">Défiler</span>
                                 <span class="linea-basic-magic-mouse"></span>
                             </a>
 
