--- a/src/AppBundle/Resources/views/base.html.twig
+++ b/src/AppBundle/Resources/views/base.html.twig
@@ -35,7 +35,10 @@
     {% endblock %}
 
 <body id="page-top" data-spy="scroll" data-target=".navbar">
-{% block body %}{% endblock %}
+
+    {% block body %}
+
+    {% endblock %}
 
 <!-- JS -->
 <link href="{{ asset('js/vendor/modernizr-2.8.3.min.js') }}" rel="stylesheet">
