Ajout formulaire contact à l'accueil

--- a/src/AppBundle/Resources/views/public/contact.html.twig
+++ b/src/AppBundle/Resources/views/public/contact.html.twig
@@ -32,7 +32,7 @@
               <!-- Phone --> 
               <div class="form-group ws-s"> 
                 <input type="tel" name="phone" id="phone-contact-3" class="form-control"> 
-                <label for="email-contact-3">Telephone</label> 
+                <label for="email-contact-3">Téléphone</label> 
               </div> 
  
               <!-- Message --> 
