Creation CRW\PlatformBundle

--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -141,7 +141,7 @@
 
     {% endblock %}
 
-{% block Contact %}
+    {% block Contact %}
 
         <!-- ========== Section Contact ========== -->
 
@@ -201,14 +201,14 @@
 
                     <!-- Name -->
                     <div class="form-group">
-                      <input type="text" name="name" id="name-contact-1" class="form-control validate-locally" placeholder="Enter your name">
+                      <input type="text" name="name" id="name-contact-1" class="form-control validate-locally" placeholder="Votre nom">
                       <label for="name-contact-1">Nom</label>
                       <span class="pull-right alert-error"></span>
                     </div>
 
                     <!-- Email -->
                     <div class="form-group">
-                      <input type="email" name="email" id="email-contact-1" class="form-control validate-locally" placeholder="Enter your email">
+                      <input type="email" name="email" id="email-contact-1" class="form-control validate-locally" placeholder="Votre email">
                       <label for="email-contact-1">Email</label>
                       <span class="pull-right alert-error"></span>
                     </div>
@@ -219,7 +219,7 @@
 
                     <!-- Message -->
                     <div class="form-group">
-                      <textarea name="message" id="message-contact-1" class="form-control" rows="5" placeholder="Your Message"></textarea>
+                      <textarea name="message" id="message-contact-1" class="form-control" rows="5" placeholder="Votre message"></textarea>
                       <label for="message-contact-1">Message</label>
                     </div>
                     <div>
