--- a/src/CRW/PlatformBundle/Resources/views/Contact/index.html.twig
+++ b/src/CRW/PlatformBundle/Resources/views/Contact/index.html.twig
@@ -2,15 +2,15 @@
  
 {% block body %} 
  
-<section id="contact" class="contact-3"> 
+  <section id="contact" class="contact-3"> 
     <div class="container"> 
       <div class="row"> 
-         
         <div class="col-md-12 col-lg-offset-2 col-lg-8"> 
           <div class="form-wrapper"> 
             <div class="from-header"> 
               <h2>Entrer en contact</h2> 
-              <p>Have a project you would like us to consider or just want to say hello? We would love to hear from you. Use the form below to describe your project and contact us. We promise to get in touch with you shortly.</p> 
+              <p>Vous avez un projet dont vous désirez que l'on considère, ou tout simplement nous dire bonjour? 
+              Utilisez le formulaire ci-dessous pour nous décrire votre projet et nous contacter. Nous vous promettons de vous répondre dans les plus brefs délais.</p> 
             </div> 
  
             <form action="../assets/contact-form/contact-form.php" method="POST" class="form-minimal form-ajax"> 
@@ -50,7 +50,6 @@
             </form> 
           </div> 
         </div> 
- 
       </div> 
     </div><!-- / .container --> 
   </section><!-- / .contact-3 --> 
