--- a/src/CRW/PlatformBundle/Resources/views/Default/index.html.twig
+++ b/src/CRW/PlatformBundle/Resources/views/Default/index.html.twig
@@ -113,7 +113,7 @@
 
         <!-- ========== Section Annonce ========== -->
 
-        <section id="about" class="container">
+        <section id="annonce" class="container">
             <div class="row section">
 
                 <header class="sec-heading">
