--- a/app/Resources/TwigBundle/views/Exception/error404.html.twig
+++ b/app/Resources/TwigBundle/views/Exception/error404.html.twig
@@ -1,288 +1,24 @@
-<!doctype html>
+{# app/Resources/TwigBundle/views/Exception/error404.html.twig #}
 
-<html class="no-js" lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Page non trouvée</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+{% extends '::base.html.twig' %}
 
-        {% block stylesheets %}
-        <!-- Favicon -->
-        <link rel="shortcut icon" href="favicon.ico">
-        <!-- Bootstrap -->
-        <link rel="stylesheet" href="assets/styles/vendor/bootstrap.min.css">
-        <!-- Fonts -->
-        <link rel="stylesheet" href="assets/fonts/et-lineicons/css/style.css">
-        <link rel="stylesheet" href="assets/fonts/fontawesome/css/font-awesome.min.css">
-        <!-- Slider -->
-        <link rel="stylesheet" href="assets/styles/vendor/slick.css">
-        <!-- Lightbox -->
-        <link rel="stylesheet" href="assets/styles/vendor/magnific-popup.css">
-        <!-- Animate.css -->
-        <link rel="stylesheet" href="assets/styles/vendor/animate.css">
-
-
-        <!-- Definity CSS -->
-        <link rel="stylesheet" href="assets/styles/main.css">
-        <link rel="stylesheet" href="assets/styles/responsive.css">
-
-        {% endblock %}
-
-        <!-- JS -->
-        <script src="assets/js/vendor/modernizr-2.8.3.min.js"></script>
-
-    </head>
-    {% block body %}
-    <body id="page-top">
-
-        <div class="preloader">
-          <img src="assets/images/loader.svg" alt="Loading...">
+{% block body %}
+  <div id="error" class="page">
+    <div class="wrapper-404">
+      <div class="content-wrapper">
+        <div class="lead-wrapper">
+          <h1 class="lead-404">404</h1>
         </div>
 
+        <div class="info-wrapper">
+          <p class="info-404">Oops... La page que vous cherchez<br> n'existe pas! Par chance, nous<br> avons des pages déjà existantes</p>
+        </div>
 
-        
-        <!-- ========== Navigation ========== -->
+        <ul class="links-404">
+          <li><a href="/" class="btn btn-light btn-small">Retour à l'accueil</a></li>
+        </ul>
 
-        <nav class="navbar navbar-default navbar-static-top mega" role="navigation">
-          <div class="container">
-            <div class="navbar-header">
-              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-              </button>
-
-              <!-- Logo -->
-              <a class="navbar-brand" href="index.html"><img class="navbar-logo" src="assets/images/logo.png" alt="Definity - Logo"></a>
-            </div><!-- / .navbar-header -->
-
-            <!-- Navbar Links -->
-            <div id="navbar" class="navbar-collapse collapse">
-              <ul class="nav navbar-nav">
-
-                <!-- Home -->
-                <li class="dropdown mega-fw">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-delay="350" role="button" aria-haspopup="true" aria-expanded="false">Home<span class="caret"></span></a>
-                  <ul class="dropdown-menu">
-                    <div class="row">
-
-                      <!-- Multi Page -->
-                      <div class="col-lg-3 mb-sm-30">
-                        <li class="dropdown-header">Multipage</li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="index-main-mp.html" target="_blank">Main Demo</a></li>
-                        <li><a href="index-fs-slider-mp.html" target="_blank">Full Screen Slider</a></li>
-                        <li><a href="index-fs-video-mp.html" target="_blank">Full Screen Video</a></li>
-                        <li><a href="index-kenburn-mp.html" target="_blank">Kenburn Slider</a></li>
-                        <li><a href="index-fw-slider-mp.html" target="_blank">Full Width Slider</a></li>
-                      </div>
-
-                      <div class="col-lg-3 mb-sm-30">
-                        <li class="dropdown-header">Multipage</li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="index-animated-mp.html" target="_blank">Animated Heading</a></li>
-                        <li><a href="index-fw-video-mp.html" target="_blank">Full Width Video</a></li>
-                        <li><a href="index-text-mp.html" target="_blank">Text Slider</a></li>
-                        <li><a href="index-freelancer-mp.html" target="_blank">Freelancer</a></li>
-                        <li><a href="index-agency-mp.html" target="_blank">Agency</a></li>
-                        <li><a href="index-agency2-mp.html" target="_blank">Agency 2 <span class="label label-red">New</span></a></li>
-                      </div>
-
-                      <!-- Onepage -->
-                      <div class="col-lg-3 mb-sm-30">
-                        <li class="dropdown-header">Onepage</li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="index-main-op.html" target="_blank">Main Demo</a></li>
-                        <li><a href="index-fs-slider-op.html" target="_blank">Full Screen Slider</a></li>
-                        <li><a href="index-fs-video-op.html" target="_blank">Full Screen Video</a></li>
-                        <li><a href="index-kenburn-op.html" target="_blank">Kenburn Slider</a></li>
-                        <li><a href="index-fw-slider-op.html" target="_blank">Full Width Slider</a></li>
-                        <li><a href="index-fw-video-op.html" target="_blank">Full Width Video</a></li>
-                      </div>
-
-                      <div class="col-md-3 mb-sm-30">
-                        <li class="dropdown-header">Onepage</li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="index-animated-op.html" target="_blank">Animated Heading</a></li>
-                        <li><a href="index-text-op.html" target="_blank">Text Slider</a></li>
-                        <li><a href="index-freelancer-op.html" target="_blank">Freelancer</a></li>
-                        <li><a href="index-agency-op.html" target="_blank">Agency</a></li>
-                        <li><a href="index-agency2-op.html" target="_blank">Agency 2 <span class="label label-red">New</span></a></li>
-                        <li><a href="index-landing.html" target="_blank">Landing Page</a></li>
-                      </div>
-
-                    </div><!-- / .row -->
-                  </ul><!-- / .dropdown-menu -->
-                </li><!-- / Home -->
-                
-
-                <!-- Elements -->
-                <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-delay="350" role="button" aria-haspopup="true" aria-expanded="false">Elements <span class="caret"></span></a>
-                  <ul class="dropdown-menu">
-                    <div class="row">
-
-                      <!-- Basic -->
-                      <div class="col-lg-6 mb-sm-30">
-                        <li class="dropdown-header">Basic</li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="elements/typography.html" target="_blank"><i class="fa fa-font"></i> Typography</a></li>
-                        <li><a href="elements/buttons.html" target="_blank"><i class="fa fa-bold"></i> Buttons</a></li>
-                        <li><a href="elements/forms.html" target="_blank"><i class="fa fa-send"></i> Forms</a></li>
-                        <li><a href="elements/grid.html" target="_blank"><i class="fa fa-th"></i> Grid</a></li>
-                        <li><a href="elements/alerts.html" target="_blank"><i class="fa fa-info-circle"></i> Alerts</a></li>
-                        <li><a href="elements/labels.html" target="_blank"><i class="fa fa-info-circle"></i> Labels <span class="label label-red">New</span></a></li>
-                        <li><a href="elements/progress-bars.html" target="_blank"><i class="fa fa-tasks"></i> Progress Bars</a></li>
-                        <li><a href="http://fortawesome.github.io/Font-Awesome/icons/" target="_blank"><i class="fa fa-flag"></i> Font Awesome</a></li>
-                        <li><a href="elements/line-icons-page.html" target="_blank"><i class="fa fa-flag-o"></i> Line Icons</a></li>
-                        <li><a href="elements/linea-icons-page.html" target="_blank"><i class="fa fa-flag-o"></i> Line Icons 2</a></li>
-                      </div>
-
-                      <!-- Layout -->
-                      <div class="col-lg-6 mb-sm-30">
-                        <li class="dropdown-header">Layout</li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="elements/headers.html" target="_blank"><i class="fa fa-header"></i> Headers</a></li>
-                        <li><a href="elements/footers.html" target="_blank"><i class="fa fa-leaf"></i> Footers</a></li>
-                        <li><a href="elements/features.html" target="_blank"><i class="fa fa-star"></i> Features <span class="label label-dark">Hot</span></a></li>
-                        <li><a href="elements/cta.html" target="_blank"><i class="fa fa-link"></i> CTA</a></li>
-                        <li><a href="elements/counters.html" target="_blank"><i class="fa fa-circle-o-notch"></i> Counters</a></li>
-                        <li><a href="elements/pricing.html" target="_blank"><i class="fa fa-dollar"></i> Pricing</a></li>
-                        <li><a href="elements/team.html" target="_blank"><i class="fa fa-users"></i> Team</a></li>
-                        <li><a href="elements/testimonials.html" target="_blank"><i class="fa fa-comment"></i> Testimonials</a></li>
-                      </div>
-
-                    </div><!-- / .row -->
-                  </ul><!-- / .dropdown-menu -->
-                </li><!-- / Elements -->
-
-
-                <!-- Pages -->
-                <li class="dropdown mega-fw">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-delay="350" role="button" aria-haspopup="true" aria-expanded="false">Pages <span class="caret"></span></a>
-                  <ul class="dropdown-menu">
-                    <div class="row">
-                      
-                      <!-- Introduction -->
-                      <div class="col-lg-3 mb-sm-30">
-                        <li class="dropdown-header">Introduction</li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="pages/about-1.html">Abouts Us 1</a></li>
-                        <li><a href="pages/about-2.html">About Us 2</a></li>
-                        <li><a href="pages/team-1.html">Team Members 1</a></li>
-                        <li><a href="pages/team-2.html">Team Members 2</a></li>
-                        <li><a href="pages/clients.html">Clients</a></li>
-                      </div>
-
-                      <!-- Contact -->
-                      <div class="col-lg-3 mb-sm-30">
-                        <li class="dropdown-header">Contact</li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="pages/contact-1.html">Contact Page 1</a></li>
-                        <li><a href="pages/contact-2.html">Contact Page 2</a></li>
-                        <li><a href="pages/contact-3.html">Contact Page 3</a></li>
-                      </div>
-
-                      <!-- Miscellaneous -->
-                      <div class="col-lg-3 mb-sm-30">
-                        <li class="dropdown-header">Other</li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="404.html">404 Page</a></li>
-                        <li><a href="pages/maintenance.html">Maintenance Page</a></li>
-                        <li><a href="pages/coming-soon-1.html">Coming Soon 1</a></li>
-                        <li><a href="pages/coming-soon-2.html">Coming Soon 2</a></li>
-                        <li><a href="pages/blank.html">Blank Page</a></li>
-                      </div>
-
-                    </div><!-- / .row -->
-                  </ul><!-- / .dropdown-menu -->
-                </li><!-- / Pages -->
-                
-
-                <!-- Portfolio -->
-                <li class="dropdown mega-fw">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-delay="350" role="button" aria-haspopup="true" aria-expanded="false">Portfolio <span class="caret"></span></a>
-                  <ul class="dropdown-menu">
-
-                    <!-- Full Width -->
-                    <div class="col-lg-3 mb-sm-30">
-                      <li class="dropdown-header">Full Width</li>
-                      <li role="separator" class="divider"></li>
-                      <li><a href="pages/portfolio/portfolio-fw-1col.html">Full Width 1 Column</a></li>
-                      <li><a href="pages/portfolio/portfolio-fw-2col.html">Full Width 2 Columns</a></li>
-                      <li><a href="pages/portfolio/portfolio-fw-3col.html">Full Width 3 Columns</a></li>
-                      <li><a href="pages/portfolio/portfolio-fw-4col.html">Full Width 4 Columns</a></li>
-                    </div>
-
-                  </ul><!-- / .dropdown-menu -->
-                </li><!-- / Portfolio -->
-                
-              
-
-              <!-- Navbar Links Right -->
-              <ul class="nav navbar-nav navbar-right">
-
-                <!-- Search -->
-                <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-search"></i> Search</a>
-                  <ul class="dropdown-menu search-dropdown">
-                    <li><form action="post"><input type="search" class="form-control" placeholder="Search..."></form></li>
-                  </ul>
-                </li><!-- / Search -->
-
-              </ul><!-- / .nav .navbar-nav .navbar-right -->
-
-            </div><!--/.navbar-collapse -->
-          </div><!-- / .container -->
-        </nav><!-- / .navbar -->
-
-
-
-        <!-- ========== 404 Page - (Not Found) ========== -->
-
-        <div class="wrapper-404">
-          <div class="content-wrapper">
-
-            <div class="lead-wrapper">
-              <h1 class="lead-404">404</h1>
-            </div>
-
-            <div class="info-wrapper">
-              <p class="info-404">Oops... La page que vous cherchez<br> n'existe pas! Par chance, nous<br> avons des pages déjà existantes</p>
-            </div>
-
-            <ul class="links-404">
-              <li><a href="index.html" class="btn btn-light btn-small">Retour à l'accueil</a></li>
-            </ul>
-
-          </div>
-        </div><!-- / .wrapper-404 -->
-
-
-
-    
-
-        <!-- ========== Scripts ========== -->
-
-        <script src="assets/js/vendor/jquery-2.1.4.min.js"></script>
-        <script src="assets/js/vendor/google-fonts.js"></script>
-        <script src="assets/js/vendor/jquery.easing.js"></script>
-        <script src="assets/js/vendor/jquery.waypoints.min.js"></script>
-        <script src="assets/js/vendor/bootstrap.min.js"></script>
-        <script src="assets/js/vendor/bootstrap-hover-dropdown.min.js"></script>
-        <script src="assets/js/vendor/smoothscroll.js"></script>
-        <script src="assets/js/vendor/jquery.localScroll.min.js"></script>
-        <script src="assets/js/vendor/jquery.scrollTo.min.js"></script>
-        <script src="assets/js/vendor/jquery.stellar.min.js"></script>
-        <script src="assets/js/vendor/jquery.parallax.js"></script>
-        <script src="assets/js/vendor/slick.min.js"></script>
-        <script src="assets/js/vendor/isotope.min.js"></script>
-        <script src="assets/js/vendor/wow.min.js"></script>
-
-        <!-- Definity JS -->
-        <script src="assets/js/main.js"></script>
-    </body>
-</html>
+      </div>
+    </div><!-- / .wrapper-404 -->
+  </div>
+{% endblock %}
