--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -42,7 +42,7 @@
 
         {% block javascripts %}
             <!-- JS -->
-            <link href="{{ asset('js/vendor/modernizr-2.8.3.min.js') }}" rel="stylesheet">
+            <link rel="stylesheet" href="{{ asset('js/vendor/modernizr-2.8.3.min.js') }}" >
 
             <!-- ========== Scripts ========== -->
 
