--- a/web/css/main.css
+++ b/web/css/main.css
@@ -2029,7 +2029,7 @@ fieldset[disabled] .form-control:hover {
 
 /* ---- 4.5 Header/Page Title Parallax ---- */
 .pt-plax-md-dark {
-  background: url(http://placehold.it/2440x1280);
+  background: url(http://www.gifpromotion.fr/media//programme_immobilier_houilles_78__villa_adelaide__096916600_1215_15012016.jpg);
   background-size: cover;
   background-position: 50%;
 }
@@ -2045,7 +2045,7 @@ fieldset[disabled] .form-control:hover {
 }
 
 .pt-plax-md-light {
-  background: url(http://placehold.it/2440x1280);
+  background: url(http://www.gifpromotion.fr/media//programme_immobilier_houilles_78__villa_adelaide__096916600_1215_15012016.jpg);
   background-size: cover;
 }
 
@@ -2060,7 +2060,7 @@ fieldset[disabled] .form-control:hover {
 }
 
 .pt-plax-lg-dark {
-  background: url(http://placehold.it/2440x1280);
+  background: url(http://www.gifpromotion.fr/media//programme_immobilier_houilles_78__villa_adelaide__096916600_1215_15012016.jpg);
   background-size: cover;
 }
 
@@ -2075,7 +2075,7 @@ fieldset[disabled] .form-control:hover {
 }
 
 .pt-plax-lg-light {
-  background: url(http://placehold.it/2440x1280);
+  background: url(http://www.gifpromotion.fr/media//programme_immobilier_houilles_78__villa_adelaide__096916600_1215_15012016.jpg);
   background-size: cover;
 }
 
@@ -4018,7 +4018,7 @@ fieldset[disabled] .form-control:hover {
 
 .video-bg-section {
   height: 365px;
-  background: #ccc url(http://placehold.it/2440x1578);
+  background: #ccc url(http://www.gifpromotion.fr/media//programme_immobilier_houilles_78__villa_adelaide__096916600_1215_15012016.jpg);
   background-position: 50%;
   background-size: cover;
 }
@@ -4197,7 +4197,7 @@ fieldset[disabled] .form-control:hover {
 /* ---- 10.1 Circle Counters ---- */
 .circles-counters, .circles-counters-dark-bg {
   position: relative;
-  background: #ccc url(http://placehold.it/2440x1578);
+  background: #ccc url(http://www.gifpromotion.fr/media//programme_immobilier_houilles_78__villa_adelaide__096916600_1215_15012016.jpg);
   background-size: cover;
   background-attachment: fixed;
 }
@@ -4371,7 +4371,7 @@ fieldset[disabled] .form-control:hover {
 -------------------------------------------------- */
 /* ---- 12.1 Testimonial - 1 Column Slider ---- */
 .testimonials-parallax, .testimonials-dark {
-  background: url(http://placehold.it/2440x1578);
+  background: url(http://www.gifpromotion.fr/media//programme_immobilier_houilles_78__villa_adelaide__096916600_1215_15012016.jpg);
   background-size: cover;
   background-position: 50%;
   background-attachment: fixed;
@@ -4485,7 +4485,7 @@ fieldset[disabled] .form-control:hover {
 }
 
 .testimonials-bg-2 {
-  background: url(http://placehold.it/2440x1578);
+  background: url(http://www.gifpromotion.fr/media//programme_immobilier_houilles_78__villa_adelaide__096916600_1215_15012016.jpg);
   background-size: cover;
   background-position: 50%;
   background-attachment: fixed;
@@ -4581,7 +4581,7 @@ fieldset[disabled] .form-control:hover {
 
 /* ---- 12.3 Clients List ---- */
 .clients-list-parallax, .clients-list-minimal, .clients-list-gray {
-  background: url(http://placehold.it/2440x1578);
+  background: url(http://www.gifpromotion.fr/media//programme_immobilier_houilles_78__villa_adelaide__096916600_1215_15012016.jpg);
   background-size: cover;
   background-attachment: fixed;
 }
@@ -7268,7 +7268,7 @@ form .input-error-2:focus {
   position: relative;
   width: 100%;
   height: 100%;
-  background: #ececec url(http://placehold.it/2440x1578);
+  background: #ececec url(http://www.gifpromotion.fr/media//programme_immobilier_houilles_78__villa_adelaide__096916600_1215_15012016.jpg);
   background-position: 50%;
   background-size: cover;
   background-attachment: fixed;
@@ -7428,7 +7428,7 @@ form .input-error-2:focus {
 .comingsoon {
   width: 100%;
   height: 100vh;
-  background: #ececec url(http://placehold.it/2440x1578);
+  background: #ececec url(http://www.gifpromotion.fr/media//programme_immobilier_houilles_78__villa_adelaide__096916600_1215_15012016.jpg);
   background-position: 50%;
   background-size: cover;
 }
@@ -7498,7 +7498,7 @@ form .input-error-2:focus {
   display: table;
   width: 100%;
   height: 100vh;
-  background: #ececec url(http://placehold.it/2440x1578);
+  background: #ececec url(http://www.gifpromotion.fr/media//programme_immobilier_houilles_78__villa_adelaide__096916600_1215_15012016.jpg);
   background-position: 50%;
   background-size: cover;
 }
@@ -7597,7 +7597,7 @@ form .input-error-2:focus {
 	23.0 Maintenance Page
 -------------------------------------------------- */
 .bg-maintenance {
-  background: #ccc url(http://placehold.it/2440x1578);
+  background: #ccc url(http://www.gifpromotion.fr/media//programme_immobilier_houilles_78__villa_adelaide__096916600_1215_15012016.jpg);
   background-position: 50%;
   background-size: cover;
 }
@@ -7851,7 +7851,7 @@ form .input-error-2:focus {
   position: relative;
   width: 100%;
   height: 100vh;
-  background: url(http://placehold.it/2440x1578);
+  background: url(http://www.gifpromotion.fr/media//programme_immobilier_houilles_78__villa_adelaide__096916600_1215_15012016.jpg);
   background-size: cover;
   background-attachment: fixed;
 }
@@ -7926,7 +7926,7 @@ form .input-error-2:focus {
 }
 
 .fs-slide-1 {
-  background: url(http://placehold.it/2440x1578);
+  background: url(http://www.gifpromotion.fr/media//programme_immobilier_houilles_78__villa_adelaide__096916600_1215_15012016.jpg);
   background-size: cover;
 }
 
@@ -7953,7 +7953,7 @@ form .input-error-2:focus {
 }
 
 .fs-slide-2 {
-  background: url(http://placehold.it/2440x1578);
+  background: url(http://www.gifpromotion.fr/media//programme_immobilier_houilles_78__villa_adelaide__096916600_1215_15012016.jpg);
   background-size: cover;
 }
 
@@ -7984,7 +7984,7 @@ form .input-error-2:focus {
 }
 
 .fs-slide-3 {
-  background: url(http://placehold.it/2440x1578);
+  background: url(http://www.gifpromotion.fr/media//programme_immobilier_houilles_78__villa_adelaide__096916600_1215_15012016.jpg);
   background-size: cover;
 }
 
@@ -8051,7 +8051,7 @@ form .input-error-2:focus {
 }
 
 .fw-slider-hero .fw-slide-1, .fw-slider-hero .fw-slide-3 {
-  background: url(http://placehold.it/2440x1578);
+  background: url(http://www.gifpromotion.fr/media//programme_immobilier_houilles_78__villa_adelaide__096916600_1215_15012016.jpg);
   background-size: cover;
   background-position: 50%;
 }
@@ -8075,7 +8075,7 @@ form .input-error-2:focus {
 }
 
 .fw-slider-hero .fw-slide-2 {
-  background: url(http://placehold.it/2440x1578);
+  background: url(http://www.gifpromotion.fr/media//programme_immobilier_houilles_78__villa_adelaide__096916600_1215_15012016.jpg);
   background-size: cover;
   background-position: 50%;
 }
@@ -8107,7 +8107,7 @@ form .input-error-2:focus {
 }
 
 .fw-slider-hero .fw-slide-3 {
-  background: url(http://placehold.it/2440x1578);
+  background: url(http://www.gifpromotion.fr/media//programme_immobilier_houilles_78__villa_adelaide__096916600_1215_15012016.jpg);
   background-size: cover;
   background-position: 50%;
 }
@@ -8123,7 +8123,7 @@ form .input-error-2:focus {
 
 /* ---- 20.4 Full Screen Video ---- */
 .fs-video-hero, .fw-video-hero {
-  background: url(http://placehold.it/2440x1578);
+  background: url(http://www.gifpromotion.fr/media//programme_immobilier_houilles_78__villa_adelaide__096916600_1215_15012016.jpg);
   background-size: cover;
 }
 
@@ -8172,7 +8172,7 @@ form .input-error-2:focus {
 
 /* ---- 20.6 Text Slider ---- */
 .text-slider-hero {
-  background: url(http://placehold.it/2440x1578);
+  background: url(http://www.gifpromotion.fr/media//programme_immobilier_houilles_78__villa_adelaide__096916600_1215_15012016.jpg);
   background-size: cover;
   background-position: 50%;
 }
@@ -8207,7 +8207,7 @@ form .input-error-2:focus {
 
 /* ---- 20.7 Freelancer ---- */
 .freelancer-hero {
-  background: url(http://placehold.it/2440x1578);
+  background: url(http://www.gifpromotion.fr/media//programme_immobilier_houilles_78__villa_adelaide__096916600_1215_15012016.jpg);
   background-size: cover;
   background-position: 40%;
   background-attachment: fixed;
@@ -8284,7 +8284,7 @@ form .input-error-2:focus {
 }
 
 .agency2-hero {
-  background: url(http://placehold.it/2440x1578);
+  background: url(http://www.gifpromotion.fr/media//programme_immobilier_houilles_78__villa_adelaide__096916600_1215_15012016.jpg);
   background-size: cover;
   background-position: 50%;
   background-attachment: fixed;
@@ -8354,7 +8354,7 @@ form .input-error-2:focus {
 
 /* ---- 20.9 Animated Heading ---- */
 .animated-hero {
-  background: url(http://placehold.it/2440x1578);
+  background: url(http://www.gifpromotion.fr/media//programme_immobilier_houilles_78__villa_adelaide__096916600_1215_15012016.jpg);
   background-size: cover;
   background-position: 50%;
   background-attachment: fixed;
@@ -8464,7 +8464,7 @@ form .input-error-2:focus {
   position: relative;
   width: 100%;
   height: 100vh;
-  background: url(http://placehold.it/2440x1578);
+  background: url(http://www.gifpromotion.fr/media//programme_immobilier_houilles_78__villa_adelaide__096916600_1215_15012016.jpg);
   background-size: cover;
   background-position: 40%;
   background-attachment: fixed;
@@ -8571,7 +8571,7 @@ form .input-error-2:focus {
 }
 
 .web-app-hero {
-  background: url(http://placehold.it/2440x1578);
+  background: url(http://www.gifpromotion.fr/media//programme_immobilier_houilles_78__villa_adelaide__096916600_1215_15012016.jpg);
   background-size: cover;
   background-position: 50%;
   background-attachment: fixed;
