--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -27,7 +27,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <!-- Logo -->
-                <a class="navbar-brand" href="index.html"><img src="{{ asset('img/logo-light.png') }}"></a>
+                <a class="navbar-brand" href="/"><img src="{{ asset('img/logo-light.png') }}"></a>
             </div>
 
             <!-- Navbar Links -->
@@ -59,7 +59,7 @@
                             <img src="{{ asset('img/hero/ag2-logo.png') }}" alt="Presentation">
                             <h1 class="hero-lead">E-Mobilier</h1>
                             <h4 class="h-alt hero-secondary">Agence de regroupement d'annonces immobilières</h4>
-                            <a href="#about" class="btn btn-light">En savoir plus</a>
+                            <a href="#annonce" class="btn btn-light">Voir les annonces</a>
 
                             <!-- Scroller -->
                             <a href="#about" class="scroller">
