--- a/src/CRW/PlatformBundle/Resources/views/Default/index.html.twig
+++ b/src/CRW/PlatformBundle/Resources/views/Default/index.html.twig
@@ -33,9 +33,9 @@
             <!-- Navbar Links -->
             <div id="navbar" class="navbar-collapse collapse page-scroll navbar-right">
                 <ul class="nav navbar-nav">
-                    <li><a href="#home">Accueil<span class="sr-only"></span></a></li>
-                    <li><a href="#annonce">Annonces<span class="sr-only"></span></a></li>
-                    <li><a href="#contact">Contact<span class="sr-only"></span></a></li>
+                    <li><a href="/">Accueil<span class="sr-only"></span></a></li>
+                    <li><a href="/annonce">Annonces<span class="sr-only"></span></a></li>
+                    <li><a href="/contact">Contact<span class="sr-only"></span></a></li>
                 </ul><!-- / .nav .navbar-nav -->
             </div><!--/.navbar-collapse -->
         </nav><!-- / .navbar -->
@@ -59,7 +59,7 @@
                             <img src="{{ asset('img/hero/ag2-logo.png') }}" alt="Presentation">
                             <h1 class="hero-lead">E-Mobilier</h1>
                             <h4 class="h-alt hero-secondary">Agence de regroupement d'annonces immobilières</h4>
-                            <a href="#about" class="btn btn-light">En savoir plus</a>
+                            <a href="#annonce" class="btn btn-light">Voir les annonces</a>
 
                             <!-- Scroller -->
                             <a href="#about" class="scroller">
