--- a/src/CRW/PlatformBundle/Resources/views/Default/index.html.twig
+++ b/src/CRW/PlatformBundle/Resources/views/Default/index.html.twig
@@ -196,7 +196,7 @@
             
             <!-- Contact Form -->
             <div class="row">
-              <form action="../assets/contact-form/contact-form.php" method="POST" id="contact-form-1" class="form-ajax">
+              <form action="{{ asset('css/contact-form/contact-form-accueil.php') }}" method="POST" id="contact-form-1" class="form-ajax">
                   <div class="col-md-offset-2 col-md-4 wow fadeInUp" data-wow-duration="1s">
 
                     <!-- Name -->
