Ajout "Notre équipe" à l'accueil

--- a/src/CRW/PlatformBundle/Resources/views/Default/index.html.twig
+++ b/src/CRW/PlatformBundle/Resources/views/Default/index.html.twig
@@ -77,7 +77,7 @@
 
     {% endblock %}
 
-    {% block About_section %}
+    {% block presentation %}
 
         <!-- ========== About - Section ========== -->
 
@@ -102,13 +102,150 @@
             </div><!-- / .row -->
             <div class="row ws-m">
                 <div class="col-md-12 text-center">
-                    <a href="pages/about-1.html" class="btn-text">Plus d'informations</a>
+                    <button class="btn" href="/apropos">Plus d'informations</button>
                 </div>
             </div>
         </section><!-- / .container -->
 
     {% endblock %}
+{% block About_us %}
 
+        <!-- ========== About - Section ========== -->
+        <div class="gray-bg">
+          <section class="container section team-4col">
+            <div class="row">
+              
+              <header class="sec-heading">
+                <h2>Notre équipe</h2>
+                <span class="subheading">Nous sommes des professionnels de la création</span>
+              </header>
+
+              <!-- Member 1 -->
+              <div class="col-lg-3 col-md-6 mb-sm-50">
+                <div class="t-item">
+
+                  <!-- Image -->
+                  <div class="t-image">
+                    <img src="http://placehold.it/360x440" alt="Team Member" class="img-responsive">
+                    <div class="t-description">
+                      <div class="content-wrapper">
+                        <h4 class="h-alt">Hello!</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
+                      </div>
+                    </div>
+                  </div>
+
+                  <!-- Info -->
+                  <div class="t-info">
+                    <h4 class="t-name">Benedict BIANCHINI</h4>
+                    <span class="t-role">Chef de projet</span>
+                    <ul class="social-links">
+                      <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                      <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                      <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
+                    </ul>
+                  </div>
+
+                </div><!-- / .t-item -->
+              </div><!-- / .col-lg-3 -->
+
+
+              <!-- Member 2 -->
+              <div class="col-lg-3 col-md-6 mb-sm-50">
+                <div class="t-item">
+
+                  <!-- Image -->
+                  <div class="t-image">
+                    <img src="http://placehold.it/360x440" alt="Team Member" class="img-responsive">
+                    <div class="t-description">
+                      <div class="content-wrapper">
+                        <h4 class="h-alt">Qui suis-je ?</h4>
+                        <p>J'ai rejoins cette entreprise avec l'aspiration de pouvoir développer un projet de grande envergure. De ce point de vue, E-mobilier correspond parfaitement à mes critères.</p>
+                      </div>
+                    </div>
+                  </div>
+
+                  <!-- Info -->
+                  <div class="t-info">
+                    <h4 class="t-name">Mehdi CHOUANIA</h4>
+                    <span class="t-role">Web Developpeur</span>
+                    <ul class="social-links">
+                      <li><a href="https://www.linkedin.com/in/mehdi-chouania-24840ba6/"><i class="fa fa-linkedin"></i></a></li>
+                      <li><a href="http://chouania-mehdi.fr/"><i class="fa fa-dribbble"></i></a></li>
+                    </ul>
+                  </div>
+
+                </div><!-- / .t-item -->
+              </div><!-- / .col-lg-3 -->
+
+
+              <!-- Member 3 -->
+              <div class="col-lg-3 col-md-6 mb-sm-50">
+                <div class="t-item">
+
+                  <!-- Image -->
+                  <div class="t-image">
+                    <img src="http://placehold.it/360x440" alt="Team Member" class="img-responsive">
+                    <div class="t-description">
+                      <div class="content-wrapper">
+                        <h4 class="h-alt">Hello!</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
+                      </div>
+                    </div>
+                  </div>
+
+                  <!-- Info -->
+                  <div class="t-info">
+                    <h4 class="t-name">Florian LIEVRE</h4>
+                    <span class="t-role">Web Developpeur</span>
+                    <ul class="social-links">
+                      <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                      <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                      <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
+                    </ul>
+                  </div>
+
+                </div><!-- / .t-item -->
+              </div><!-- / .col-lg-3 -->
+
+
+              <!-- Member 4 -->
+              <div class="col-lg-3 col-md-6 mb-sm-50">
+                <div class="t-item">
+
+                  <!-- Image -->
+                  <div class="t-image">
+                    <img src="http://placehold.it/360x440" alt="Team Member" class="img-responsive">
+                    <div class="t-description">
+                      <div class="content-wrapper">
+                        <h4 class="h-alt">Hello!</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
+                      </div>
+                    </div>
+                  </div>
+
+                  <!-- Info -->
+                  <div class="t-info">
+                    <h4 class="t-name">Sifa SIR</h4>
+                    <span class="t-role">Web Designer</span>
+                    <ul class="social-links">
+                      <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                      <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                      <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
+                    </ul>
+                  </div>
+
+                </div><!-- / .t-item -->
+              </div><!-- / .col-lg-3 -->
+
+
+            </div><!-- / .row -->
+          </section><!-- / .contianer -->
+        </div><!-- / .gray-bg -->
+    {% endblock %}
 {% block annonce_section %}
 
         <!-- ========== Section Annonce ========== -->
@@ -145,8 +282,8 @@
 
         <!-- ========== Section Contact ========== -->
 
+      <div class="gray-bg">
         <section id="contact" class="section contact-2">
-          
           <header class="sec-heading">
             <h2>Contactez-nous</h2>
             <span class="subheading">Nous serons ravis de vous informer</span>
@@ -233,9 +370,9 @@
 
                 </form>
             </div><!-- / .row -->
-          </div><!-- / .container -->
+          </div><!-- / .container -->  
         </section><!-- / .contact-1 -->
-
+      </div>
     {% endblock %}
 
 {% endblock %}
