Ajout Page de FAQ

--- a/src/CRW/PlatformBundle/Resources/views/Default/index.html.twig
+++ b/src/CRW/PlatformBundle/Resources/views/Default/index.html.twig
@@ -27,7 +27,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <!-- Logo -->
-                <a class="navbar-brand" href="index.html"><img src="{{ asset('img/logo-light.png') }}"></a>
+                <a class="navbar-brand" href="/"><img src="{{ asset('img/logo-light.png') }}"></a>
             </div>
 
             <!-- Navbar Links -->
@@ -35,7 +35,10 @@
                 <ul class="nav navbar-nav">
                     <li><a href="/">Accueil<span class="sr-only"></span></a></li>
                     <li><a href="/annonce">Annonces<span class="sr-only"></span></a></li>
+                    <li><a href="/apropos">A Propos<span class="sr-only"></span></a></li>
+                    <li><a href="/FAQ">FAQ<span class="sr-only"></span></a></li>
                     <li><a href="/contact">Contact<span class="sr-only"></span></a></li>
+                    <li><a href="/login">Connexion<span class="sr-only"></span></a></li>
                 </ul><!-- / .nav .navbar-nav -->
             </div><!--/.navbar-collapse -->
         </nav><!-- / .navbar -->
