Ajout Page Conditions Générales de Vente

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">    
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>{% block title %}E-Mobilier - La première plateforme d'annonces pour mendataires immobiliers{% endblock %}</title>
+        <title>{% block title %}E-Mobilier - La première plateforme d'annonces pour mandataires immobiliers{% endblock %}</title>
         <meta name="description" content="{% block metaDescription %}Ce média innovant offre la possibilité aux entreprises et aux collectivités de partager, en un seul clic, toutes les informations clés concernant leur activité. Un outil pratique et ludique pour communiquer autrement.{% endblock %}">
 
 
