--- a/src/CRW/PlatformBundle/Resources/views/Default/index.html.twig
+++ b/src/CRW/PlatformBundle/Resources/views/Default/index.html.twig
@@ -402,7 +402,7 @@
               <div class="col-md-3 col-sm-6 mb-sm-100">
                 <div class="widget about-widget">
                   <h5 class="header-widget">A Propos de nous</h5>
-                  <p>Nous sommes une plateforme d'annonces immobilières à destinations de mandataires immobiliers et fournissons des outils pour vous aider à trouver le bien de vos rêves. Les données sont fournies à titre indicatives et malgré notre vigilance peuvent contenir des erreurs. N'hésitez pas à nous les signaler dans les plus brefs délais.</p>
+                  <p>Nous sommes une plateforme d'annonces immobilières à destinations de mandataires immobiliers et fournissons des outils pour vous aider à trouver le bien de vos rêves.</p>
 
                   <ul class="social-links">
                     <li><a href="#"><i class="fa fa-facebook"></i></a></li>
