--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -29,6 +29,8 @@
             <!-- Definity CSS -->
             {#<link rel="stylesheet" href="assets/styles/main.css">#}
             <link href="{{ asset('css/main.css') }}" rel="stylesheet">
+            {#<link rel="stylesheet" href="assets/styles/simple-line-icons.css">#}
+            <link href="{{ asset('css/simple-line-icons.css') }}" rel="stylesheet">
             {#<link rel="stylesheet" href="assets/styles/responsive.css">#}
             <link href="{{ asset('css/responsive.css') }}" rel="stylesheet">
 
@@ -39,6 +41,102 @@
     <body id="page-top" data-spy="scroll" data-target=".navbar">
         
         {% block body %}{% endblock %}
+
+        {# inclus le footer #}
+        {% block footer %}
+            {{ include("CRWPlatformBundle:Cookies:banner.html.twig") }}
+
+    <!-- ========== Footer Widgets ========== -->
+        
+        <footer class="footer-widgets">
+          <div class="container">
+            <div class="row section">
+
+            <!-- Navigation -->
+              <div class="col-md-3 col-sm-6 mb-sm-100">
+                <div class="widget about-widget">
+                  <h5 class="header-widget">Navigation</h5>
+                    <a href="/">Accueil</a><br>
+                    <a href="/annonce">Annonces</a><br>
+                    <a href="/apropos">A Propos</a><br>
+                    <a href="/FAQ">FAQ</a><br>
+                    <a href="/contact">Contact</a>
+                </div><!-- / .widget -->
+              </div><!-- / .col-md-3 -->
+
+              <!-- About Us -->
+              <div class="col-md-3 col-sm-6 mb-sm-100">
+                <div class="widget about-widget">
+                  <h5 class="header-widget">A Propos de nous</h5>
+                  <p>Nous sommes une plateforme d'annonces immobilières à destinations de mandataires immobiliers et fournissons des outils pour vous aider à trouver le bien de vos rêves.</p>
+
+                  <ul class="social-links">
+                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                    <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
+                    <li><a href="#"><i class="fa fa-youtube-play"></i></a></li>
+                  </ul>
+                </div><!-- / .widget -->
+              </div><!-- / .col-md-3 -->
+
+              <!-- Instagram Feed -->
+              <div class="col-md-3 col-sm-6 mb-sm-100">
+                <div class="widget gallery-widget">
+                  <h5 class="header-widget">Dernières annonces</h5>
+                  <ul>
+
+                    <li><a href="http://placehold.it/650x450" class="gallery-widget-lightbox"><img src="http://placehold.it/87x87/999/eee" alt="Instagram Image"><div class="hover-link"><span class="linea-arrows-plus"></span></div></a></li>
+
+                    <li><a href="http://placehold.it/650x450" class="gallery-widget-lightbox"><img src="http://placehold.it/87x87" alt="Instagram Image"><div class="hover-link"><span class="linea-arrows-plus"></span></div></a></li>
+
+                    <li><a href="http://placehold.it/650x450" class="gallery-widget-lightbox"><img src="http://placehold.it/87x87/999/eee" alt="Instagram Image"><div class="hover-link"><span class="linea-arrows-plus"></span></div></a></li>
+
+                    <li><a href="http://placehold.it/650x450" class="gallery-widget-lightbox"><img src="http://placehold.it/87x87" alt="Instagram Image"><div class="hover-link"><span class="linea-arrows-plus"></span></div></a></li>
+
+                    <li><a href="http://placehold.it/650x450" class="gallery-widget-lightbox"><img src="http://placehold.it/87x87/999/eee" alt="Instagram Image"><div class="hover-link"><span class="linea-arrows-plus"></span></div></a></li>
+
+                    <li><a href="http://placehold.it/650x450" class="gallery-widget-lightbox"><img src="http://placehold.it/87x87" alt="Instagram Image"><div class="hover-link"><span class="linea-arrows-plus"></span></div></a></li>
+
+                  </ul>
+                </div><!-- / .widget -->
+              </div><!-- / .col-md-3 -->
+
+              <!-- Mentions Légales -->
+              <div class="col-md-3 col-sm-6">
+                <div class="widget about-widget">
+                  <h5 class="header-widget">Mentions légales & CGV</h5>
+                  
+                    <a href="/mentions-legales">Mentions Légales</a><br>
+                    <a href="/CGV">Conditions Générales de Vente</a><br>
+
+                </div><!-- / .widget -->
+              </div><!-- / .col-md-3 -->
+
+            </div><!-- / .row -->
+          </div><!-- / .container -->
+
+
+          <!-- Copyright -->
+          <div class="copyright">
+            <div class="container">
+              <div class="row">
+                
+                <div class="col-sm-6">
+                  <small>&copy; 2017 E-Mobilier. Fait par l'équipe développement de E-Mobilier</small>
+                </div>
+
+                <div class="col-sm-6">
+                  <small><a href="#page-top" class="pull-right to-the-top">Au début<i class="fa fa-angle-up"></i></a></small>
+                </div>
+
+              </div><!-- / .row -->
+            </div><!-- / .container -->
+          </div><!-- / .copyright -->
+
+        </footer><!-- / .footer-widgets -->
+
+        {% endblock %}
 
         {% block javascripts %}
             <!-- JS -->
@@ -57,6 +155,7 @@
             <script src="{{ asset('js/vendor/jquery.scrollTo.min.js') }}"></script>
             <script src="{{ asset('js/vendor/jquery.stellar.min.js') }}"></script>
             <script src="{{ asset('js/vendor/jquery.parallax.js') }}"></script>
+            <script src="{{ asset('js/vendor/jquery.cookie.js') }}"></script>
             <script src="{{ asset('js/vendor/slick.min.js') }}"></script>
             <script src="{{ asset('js/vendor/jquery.easypiechart.min.js') }}"></script>
             <script src="{{ asset('js/vendor/countup.min.js') }}"></script>
@@ -72,6 +171,24 @@
 
             <!-- Definity JS -->
             <script src="{{ asset('js/main.js') }}"></script>
+
+            <script>
+            console.log($.cookie('cookies_accepted'));
+                /* On vérifie si l'émément existe */
+                if ($("#cookies-banner").length > 0) {
+                    $("#cookies-banner").find('a').on('click', function(e) {
+                        e.preventDefault();
+                        $("#cookies-banner").slideUp();
+                        $.cookie('cookies_accepted', '1', { 
+                            expires: 365,
+                            secure: true,
+                        });
+                    });
+                    if ($.cookie('cookies_accepted') != 1){
+                        $("#cookies-banner").show();
+                    }
+                }
+            </script>
         {% endblock %}
     </body>
 </html>
