--- a/src/CRW/PlatformBundle/Resources/views/Faq/index.html.twig
+++ b/src/CRW/PlatformBundle/Resources/views/Faq/index.html.twig
@@ -14,7 +14,7 @@
                 <span class="icon-bar"></span>
             </button>
             <!-- Logo -->
-            <a class="navbar-brand" href="index.html"><img src="{{ asset('img/logo-light.png') }}"></a>
+            <a class="navbar-brand" href="/"><img src="{{ asset('img/logo-light.png') }}"></a>
         </div>
 
         <!-- Navbar Links -->
