--- a/src/CRW/PlatformBundle/Resources/views/Cookies/banner.html.twig
+++ b/src/CRW/PlatformBundle/Resources/views/Cookies/banner.html.twig
@@ -1,3 +1,3 @@
 <div id="cookies-banner">
-	Nous stockons des cookies, vous devez accepter.   <a href="#"><span class="label label-green">Fermer</span></a>
+	Notre site utilise les cookies pour une navigation optimale. En poursuivant votre navigation, vous en acceptez l'utilisation.   <a href="#"><span class="label label-green">Fermer</span></a>
 </div>
