Ajout section Annonce à l'accueil

--- a/src/CRW/PlatformBundle/Resources/views/Contact/index.html.twig
+++ b/src/CRW/PlatformBundle/Resources/views/Contact/index.html.twig
@@ -71,7 +71,7 @@
                 <label for="message-contact-1">Message *</label> 
               </div> 
  
-              <input type="submit" class="btn-text" value="Send Message"> 
+              <input type="submit" class="btn-ghost" value="Envoyer"> 
  
               <!-- Ajax Message --> 
               <div class="ajax-message"></div> 
