--- a/src/CRW/PlatformBundle/Resources/views/Default/index.html.twig
+++ b/src/CRW/PlatformBundle/Resources/views/Default/index.html.twig
@@ -83,7 +83,7 @@
     {% block presentation %}
 
         <!-- ========== About - Section ========== -->
-
+      <div class="gray-bg">
         <section id="about" class="container">
             <div class="row section">
 
@@ -109,9 +109,140 @@
                 </div>
             </div>
         </section><!-- / .container -->
+      </div>
 
     {% endblock %}
-{% block About_us %}
+
+    {% block annonce_preview %}
+
+        <!-- ========== Shop Layout - (Top Rated Product) ========== -->
+
+          <section id= "annonce" class="container section">
+
+            <div class="row">
+              <header class="sec-heading">
+                <h2>Les dernières annonces</h2>
+              </header>
+
+              <!-- Shop Product -->
+              <div class="col-xs-12 col-sm-6 col-lg-3">
+                <div class="shop-product-card">
+
+                  <!-- Image/Slider -->
+                  <div class="product-image-wrapper">
+                    <span class="label label-red sale-label">A VENDRE</span>
+
+                    <!-- Product Actions (hover) -->
+                    <a href="#" class="fav-btn"><span class="linea-basic-star"></span></a>
+                    
+                    <!-- Product Main Image -->
+                    <div class="shop-p-slider">
+                      <a href="../../pages/shop/shop-single.html"><img src="http://placehold.it/263x350" alt="Product Image 1"></a>
+                      <a href="../../pages/shop/shop-single.html"><img src="http://placehold.it/263x350" alt="Product Image 2"></a>
+                      <a href="../../pages/shop/shop-single.html"><img src="http://placehold.it/263x350" alt="Product Image 3"></a>
+                    </div>
+                  </div>
+
+                  <!-- Product Meta -->
+                  <div class="product-meta">
+                    <a href="../../pages/shop/shop-single.html"><h4 class="product-name">Casual Gray Blazer</h4></a>
+                    <span class="product-sep"></span>
+                    <p class="product-price">$187.99</p>
+                  </div>
+
+                </div><!-- / .shop-product-card -->
+              </div><!-- / .col-sm-3 -->
+
+
+              <!-- Shop Product -->
+              <div class="col-xs-12 col-sm-6 col-lg-3">
+                <div class="shop-product-card">
+
+                  <!-- Image/Slider -->
+                  <div class="product-image-wrapper">
+                    <span class="label label-red sale-label">A VENDRE</span>
+
+                    <!-- Product Actions (hover) -->
+                    <a href="#" class="fav-btn"><span class="linea-basic-star"></span></a>
+                    
+                    <!-- Product Main Image -->
+                    <div class="shop-p-slider">
+                      <a href="pages/shop/shop-single.html"><img src="http://placehold.it/263x350" alt="Product Image 6"></a>
+                      <a href="pages/shop/shop-single.html"><img src="http://placehold.it/263x350" alt="Product Image 11"></a>
+                    </div>
+                  </div>
+
+                  <!-- Product Meta -->
+                  <div class="product-meta">
+                    <a href="pages/shop/shop-single.html"><h4 class="product-name">Light Blue Blazer</h4></a>
+                    <span class="product-sep"></span>
+                    <p class="product-price">$97.99</p>
+                  </div>
+
+                </div><!-- / .shop-product-card -->
+              </div><!-- / .col-lg-3 -->
+
+
+              <!-- Shop Product -->
+              <div class="col-xs-12 col-sm-6 col-lg-3">
+                <div class="shop-product-card">
+
+                  <!-- Image/Slider -->
+                  <div class="product-image-wrapper">
+                  <span class="label label-green location-label">A LOUER</span>
+                    <!-- Product Actions (hover) -->
+                    <a href="#" class="fav-btn"><span class="linea-basic-star"></span></a>
+                    
+                    <!-- Product Main Image -->
+                    <div class="shop-p-slider">
+                      <a href="pages/shop/shop-single.html"><img src="http://placehold.it/263x350" alt="Product Image 7"></a>
+                      <a href="pages/shop/shop-single.html"><img src="http://placehold.it/263x350" alt="Product Image 4"></a>
+                    </div>
+                  </div>
+
+                  <!-- Product Meta -->
+                  <div class="product-meta">
+                    <a href="pages/shop/shop-single.html"><h4 class="product-name">Gray Padded Jacket</h4></a>
+                    <span class="product-sep"></span>
+                    <p class="product-price">$487.99</p>
+                  </div>
+
+                </div><!-- / .shop-product-card -->
+              </div><!-- / .col-lg-3 -->
+
+
+              <!-- Shop Product -->
+              <div class="col-xs-12 col-sm-6 col-lg-3">
+                <div class="shop-product-card">
+
+                  <!-- Image/Slider -->
+                  <div class="product-image-wrapper">
+                  <span class="label label-red sale-label">A VENDRE</span>
+                    <!-- Product Actions (hover) -->
+                    <a href="#" class="fav-btn"><span class="linea-basic-star"></span></a>
+                    
+                    <!-- Product Main Image -->
+                    <div class="shop-p-slider">
+                      <a href="pages/shop/shop-single.html"><img src="http://placehold.it/263x350" alt="Product Image 8"></a>
+                      <a href="pages/shop/shop-single.html"><img src="http://placehold.it/263x350" alt="Product Image 1"></a>
+                    </div>
+                  </div>
+
+                  <!-- Product Meta -->
+                  <div class="product-meta">
+                    <a href="pages/shop/shop-single.html"><h4 class="product-name">Dark Gray Blazer</h4></a>
+                    <span class="product-sep"></span>
+                    <p class="product-price">$115.99</p>
+                  </div>
+
+                </div><!-- / .shop-product-card -->
+              </div><!-- / .col-lg-3 -->
+            </div><!-- / .row -->
+          </section><!-- / .container -->
+
+    {% endblock %}
+
+    {% block About_us %}
 
         <!-- ========== About - Section ========== -->
         <div class="gray-bg">
@@ -248,44 +379,15 @@
             </div><!-- / .row -->
           </section><!-- / .contianer -->
         </div><!-- / .gray-bg -->
-    {% endblock %}
-{% block annonce_section %}
-
-        <!-- ========== Section Annonce ========== -->
-
-        <section id="annonce" class="container">
-            <div class="row section">
-
-                <header class="sec-heading">
-                    <h2>Annonces</h2>
-                    <span class="subheading">Lorem ipsum dolor sit amet, consectetur</span>
-                </header>
-
-                <div class="col-md-4">
-                    <blockquote>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-                        <footer><cite>by Henry Hill</cite></footer></blockquote>
-                </div>
-                <div class="col-md-4">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro dolor, hic tempore omnis! Et, quod! Repudiandae itaque necessitatibus, facilis optio debitis incidunt, veniam placeat fuga eos molestiae culpa rem eveniet.</p>
-                </div>
-                <div class="col-md-4">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro dolor, hic tempore omnis! Et, quod! Repudiandae itaque necessitatibus, facilis optio debitis incidunt, veniam placeat fuga eos molestiae culpa rem eveniet.</p>
-                </div>
-            </div><!-- / .row -->
-            <div class="row ws-m">
-                <div class="col-md-12 text-center">
-                    <a href="pages/about-1.html" class="btn-text">Plus d'informations</a>
-                </div>
-            </div>
-        </section><!-- / .container -->
 
     {% endblock %}
+
+    
 
     {% block Contact %}
 
         <!-- ========== Section Contact ========== -->
 
-      <div class="gray-bg">
         <section id="contact" class="section contact-2">
           <header class="sec-heading">
             <h2>Contactez-nous</h2>
@@ -375,7 +477,6 @@
             </div><!-- / .row -->
           </div><!-- / .container -->  
         </section><!-- / .contact-1 -->
-      </div>
     {% endblock %}
 
 {% endblock %}
