--- a/web/css/main.css
+++ b/web/css/main.css
@@ -9431,6 +9431,17 @@ form .input-error-2:focus {
   z-index: 101;
 }
 
+.shop-product-card .product-image-wrapper .location-label {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  font-size: 13px;
+  font-weight: 600;
+  letter-spacing: 0.8px;
+  background: #0BBE30;
+  z-index: 101;
+}
+
 .shop-product-card .product-image-wrapper .buy-btn {
   display: inline-block;
   position: absolute;
