--- a/src/CRW/PlatformBundle/Resources/views/Default/index.html.twig
+++ b/src/CRW/PlatformBundle/Resources/views/Default/index.html.twig
@@ -105,7 +105,7 @@
             </div><!-- / .row -->
             <div class="row ws-m">
                 <div class="col-md-12 text-center">
-                    <button class="btn" href="/apropos">Plus d'informations</button>
+                    <a href="/apropos" class="btn" >Plus d'informations</a>
                 </div>
             </div>
         </section><!-- / .container -->
@@ -117,9 +117,9 @@
 
         <!-- ========== Shop Layout - (Top Rated Product) ========== -->
 
-          <section id= "annonce" class="container section">
+          <section id= "annonce" class="container">
 
-            <div class="row">
+            <div class="row section">
               <header class="sec-heading">
                 <h2>Les dernières annonces</h2>
               </header>
@@ -238,6 +238,12 @@
                 </div><!-- / .shop-product-card -->
               </div><!-- / .col-lg-3 -->
             </div><!-- / .row -->
+
+            <div class="row ws-m">
+              <div class="col-md-12 text-center">
+                <a href="/annonce" class="btn" >Voir toutes les annonces</a>
+              </div>
+            </div>
           </section><!-- / .container -->
 
     {% endblock %}
